<resources>
    <string name="app_name">Food-O-Door</string>

    <string name="faqs">FAQs</string>
    <string name="home">Home</string>
    <string name="dummt_strind_product">An apple is an edible fruit produced by an apple tree (Malus domestica). Apple trees are cultivated worldwide and are the most widely grown species in the genus Malus. The tree originated in Central Asia, where its wild ancestor, Malus sieversii, is still found today.</string>
    <string name="add">Add</string>


    <string name="map_key" translatable="true">AIzaSyBpTJ1fQMaK0WexavtOyFKIImgABKmj9SU</string>


    <string name="add_delivery_address">Add Delivery Address</string>

    <string name="mobile_no">Mobile No*</string>
    <string name="house_no_apartment_name">House No. Apartment Name Street*</string>
    <string name="city">City*</string>
    <string name="aera">Area*</string>
    <string name="pincode">Pincode</string>
    <string name="address_type">Address Type*</string>

    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="make_this_address_as_default">Make this address as default</string>
    <string name="add_address">Add Address</string>
    <string name="done">Done</string>


    <string name="my_delivery_address">My Delivery Address</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="deliver_to">Deliver To</string>
    <string name="proceed_to_pay">Proceed To Pay</string>

    <string name="first_name">FullName*</string>

    <string name="submit">Submit</string>


    <string name="payment_summary">Payment Summary</string>
    <string name="sub_total">Sub Total</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="payment_options">Payment Options</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="online">Online</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="show">Show</string>

    <string name="place_order">Place Order</string>
    <string name="read_more">Read more…</string>

    <string name="have_an_issue">Have an Issue</string>
    <string name="titletext">Title*</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="tell_us_what_you_like_or_dislike_about_the_product_n_n_n">Tell us what you like or dislike about the product* \n\n\n</string>

    <string name="sort_by">Sort By</string>
    <string name="price_low_to_high">Price - Low to High</string>
    <string name="price_high_to_low">Price - High to Low</string>
    <string name="alphabetically">Alphabetically</string>


    <string name="checkout">Checkout</string>


    <string name="have_an_issuetext">Have an Issue</string>
    <string name="defult">Default</string>

    <string name="apply">Apply</string>
    <string name="defaultbtn">Default</string>
    <string name="by_signing_in_you_agreeing_to_our">By signing in you agreeing to our</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="cancel">Cancel</string>

    <string name="updae">Update</string>

    <string name="readless">Read less…</string>
    <string name="deleteconfirlmsg">Do you want to delete this Product ?</string>
    <string name="deleteconfiraddress">Do you want to delete this address ?</string>
    <string name="summary">Summary</string>
    <string name="items">Items</string>
    <string name="placeorder">Place Order</string>
    <string name="writetitlefirst">Write Title First</string>
    <string name="writedescriptionfirst">Write Description First</string>
    <string name="entermobilenumber">Enter Mobile Number</string>
    <string name="entervalidmobilenumber">Enter Valid Mobile Number</string>
    <string name="my_complains">My Complains</string>
    <string name="notifications">Notifications</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="loding">Loading…</string>
    <string name="deleteaddress">Delete Address</string>
    <string name="deleteproduct">Delete Product</string>
    <string name="the_all_in_ine_food_shop">the all in The food shop</string>
    <string name="deleter_this_order">Deleter this order ?</string>


</resources>