<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddDeliveryAddressActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/lyt_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingVertical="10dp">

                <ImageView
                    android:id="@+id/img_aerrow_back"
                    android:layout_width="45dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:onClick="onClickBack"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    app:tint="@color/white" />

                <TextView
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/img_aerrow_back"
                    android:fontFamily="@font/gbold"

                    android:text="@string/add_delivery_address" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lyt_appbar">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/lyt_bottom"
                android:layout_alignParentTop="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <EditText
                        android:id="@+id/et_fName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/gmidum"
                        android:hint="@string/first_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:nextFocusUp="@id/et_mobile"
                        android:textColor="@color/black"
                        android:textSize="@dimen/add_deliveryaddress_text" />


                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/gmidum"
                        android:hint="@string/mobile_no"
                        android:imeOptions="actionNext"
                        android:inputType="phone"

                        android:textColor="@color/black"
                        android:textSize="@dimen/add_deliveryaddress_text" />


                    <EditText
                        android:id="@+id/et_aera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/gmidum"
                        android:hint="@string/house_no_apartment_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"

                        android:textColor="@color/black"
                        android:textSize="@dimen/add_deliveryaddress_text" /> <EditText
                        android:id="@+id/etAddressLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/gmidum"
                        android:hint="@string/aera"
                        android:imeOptions="actionNext"
                        android:inputType="text"

                        android:textColor="@color/black"
                        android:textSize="@dimen/add_deliveryaddress_text" />


                    <EditText
                        android:id="@+id/et_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/gmidum"
                        android:hint="@string/city"
                        android:imeOptions="normal"
                        android:inputType="textCapSentences"
                        android:textColor="@color/black"
                        android:textSize="@dimen/add_deliveryaddress_text" />







                    <EditText
                        android:id="@+id/et_pin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/gmidum"
                        android:hint="@string/pincode"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="@dimen/add_deliveryaddress_text" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/gmidum"
                        android:text="@string/address_type"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="35dp">

                            <LinearLayout
                                android:id="@+id/lnr_home"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/bg_round_gredent"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/iv_home"
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:src="@drawable/ic_home"
                                    app:tint="@color/white" />

                                <TextView
                                    android:id="@+id/tv_home"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:fontFamily="@font/gsemibold"
                                    android:text="@string/home"
                                    android:textColor="@color/white" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/lnr_work"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/bg_round_gredent"
                                android:backgroundTint="@color/light_gray"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/iv_work"
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:src="@drawable/ic_addressworkbusiness_and_trade" />

                                <TextView
                                    android:id="@+id/tv_work"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:fontFamily="@font/gsemibold"
                                    android:text="@string/work"
                                    android:textColor="@color/black" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/lnr_other"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@drawable/bg_round_gredent"
                                android:backgroundTint="@color/light_gray"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tv_other"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:fontFamily="@font/gsemibold"
                                    android:text="@string/other"
                                    android:textColor="@color/black" />
                            </LinearLayout>
                        </LinearLayout>


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <CheckBox
                                android:id="@+id/chk_addressDefult"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="60dp"
                                android:fontFamily="@font/gmidum"
                                android:text="@string/make_this_address_as_default"
                                android:textColor="@color/black"
                                android:textSize="14sp" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:id="@+id/lyt_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp">

                <TextView
                    android:id="@+id/btn_addAddAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_round_gredent"
                    android:fontFamily="@font/gsemibold"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/add_address"
                    android:textColor="@color/white" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/pd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/rvMap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">
                <!--
                                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:id="@+id/myMap"
                                    android:name="com.google.android.gms.maps.SupportMapFragment"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    tools:context=".MainActivity" />-->

                <TextView
                    android:id="@+id/btnDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/bg_round"
                    android:backgroundTint="@color/orange"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp"
                    android:text="@string/done"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

</layout>