<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp">

        <TextView
            android:layout_centerHorizontal="false"
            android:fontFamily="@font/gsemibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_issue"
            android:textColor="@color/black"
            android:paddingStart="4dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:padding="3dp"
            android:src="@drawable/ic_outline_close_24"
            app:tint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnClose"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/gmidum"
                    android:text="Order Id : "
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvOrderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/gbold"
                    tools:text="AAAAAA"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="7dp"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titletext"
                android:fontFamily="@font/gregular"
                android:imeOptions="actionNext"
                android:nextFocusUp="@+id/etMobile"
                android:paddingVertical="14dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gregular"
                android:hint="@string/mobile_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:nextFocusUp="@+id/etDes"
                android:paddingVertical="14dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/gregular"
                android:gravity="top"
                android:hint="@string/tell_us_what_you_like_or_dislike_about_the_product_n_n_n"
                android:imeOptions="actionDone"
                android:textSize="14sp" />

            <LinearLayout

                android:id="@+id/lyt_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_round_gredent"
                    android:fontFamily="@font/gsemibold"
                    android:gravity="center"
                    android:paddingHorizontal="40dp"
                    android:paddingVertical="10dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</layout>