<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottom_sheet">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/gmidum"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_outline_close_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_close"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <View
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/bg_round"
                    android:backgroundTint="@color/gray" />

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="70dp"
                    android:fontFamily="@font/gmidum"
                    android:text="@string/price_low_to_high"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <View
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/bg_round"
                    android:backgroundTint="@color/gray" />

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="70dp"
                    android:fontFamily="@font/gmidum"
                    android:text="@string/price_high_to_low"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <View
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/bg_round"
                    android:backgroundTint="@color/gray" />

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="70dp"
                    android:fontFamily="@font/gmidum"
                    android:text="@string/alphabetically"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/tvApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_round_gredent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/gmidum"
                    android:text="@string/apply"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>
</layout>